--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
         <script src="LivingCreature.js"></script>
-       <script src="script.js"></script>
+        <script src="script.js"></script>
+        <script src="Grass.js"></script>
+        <script src="GrassEater.js"></script>
+        <script src="Gishatich.js"></script>
+        <script src="Kaban.js"></script>
+        <script src="Kataxi.js"></script>
+
     </head>
    <body>
         <html>
